@@ -2,7 +2,11 @@ package org.testng.internal;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Map;
 
+import org.testng.ITestContext;
 import org.testng.ITestNGMethod;
 import org.testng.TestNGException;
 import org.testng.internal.annotations.IAnnotationFinder;
@@ -16,6 +20,7 @@ import org.testng.xml.XmlTest;
 public class FactoryMethod extends BaseTestMethod {
   private Object m_instance = null;
   private XmlTest m_xmlTest = null;
+  private ITestContext m_testContext = null;
   
   /**
    * @param testClass
@@ -24,7 +29,8 @@ public class FactoryMethod extends BaseTestMethod {
   public FactoryMethod(Method method, 
                        Object instance,
                        XmlTest xmlTest, 
-                       IAnnotationFinder annotationFinder) 
+                       IAnnotationFinder annotationFinder,
+                       ITestContext testContext) 
   {
     super(method, annotationFinder);
     if (! instance.getClass().isAssignableFrom(method.getDeclaringClass())) {
@@ -34,16 +40,39 @@ public class FactoryMethod extends BaseTestMethod {
     
     m_instance = instance;
     m_xmlTest = xmlTest;
+    m_testContext = testContext;
+  }
+  
+  private static void ppp(String s) {
+    System.out.println("[FactoryMethod] " + s);
   }
   
   public Object[] invoke() {
     Object[] result = new Object[0];
     
-    Object[] parameters = 
-      Parameters.createFactoryParameters(getMethod(), 
-          m_xmlTest.getParameters(), getAnnotationFinder(), m_xmlTest.getSuite());
+//    Object[] parameters = null; 
+//      Parameters.createFactoryParameters(getMethod(), 
+//          m_xmlTest.getParameters(), getAnnotationFinder(), m_xmlTest.getSuite());
+    
+    
+    //
+    // Temporary test for data providers on factories
+    //
+    Map<String, String> allParameterNames = new HashMap<String, String>();
+    Iterator<Object[]> parameterIterator =
+      Parameters.handleParameters(this, 
+          allParameterNames, m_instance,
+          m_xmlTest.getParameters(), 
+          m_xmlTest.getSuite(), m_annotationFinder, 
+          m_testContext);
+    //
+    // end
+    //
     try {
-      result = (Object[]) getMethod().invoke(m_instance, parameters);
+      while (parameterIterator.hasNext()) {
+        Object[] parameters = parameterIterator.next();
+        result = (Object[]) getMethod().invoke(m_instance, parameters);
+      }
     }
     catch (IllegalArgumentException e) {
       e.printStackTrace();
