@@ -6,6 +6,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 
+import org.testng.ITestContext;
 import org.testng.ITestMethodFinder;
 import org.testng.ITestNGMethod;
 import org.testng.internal.annotations.AnnotationHelper;
@@ -35,12 +36,15 @@ public class TestNGMethodFinder<ITestNGMetthod> implements ITestMethodFinder {
     
   private RunInfo m_runInfo = null;
   private IAnnotationFinder m_annotationFinder = null;
+  private ITestContext m_testContext = null;
 
   public TestNGMethodFinder(RunInfo runInfo,
-                            IAnnotationFinder annotationFinder)
+                            IAnnotationFinder annotationFinder,
+                            ITestContext testContext)
   {
     m_runInfo = runInfo;
     m_annotationFinder = annotationFinder;
+    m_testContext = testContext;
   }
 
   public ITestNGMethod[] getTestMethods(Class clazz) {
