@@ -10,17 +10,14 @@ import org.testng.annotations.Test;
 public class FailingAfterTest {
   @AfterTest(alwaysRun=true)
   public void afterTest() {
-    System.out.println("afterTest");
     throw new RuntimeException("Test exception");
   }
   
   @AfterTest
   public void skippedAfterTest() {
-    System.out.println("skippedAfterTest");
   }
   
   @Test
   public void dummytest() {
-    System.out.println("dummytest");
   }
 }
