@@ -10,12 +10,10 @@ import org.testng.annotations.Test;
 public class FailingBeforeSuite {
   @BeforeSuite
   public void beforeSuite() {
-    System.out.println("beforeSuite");
     throw new RuntimeException("Test exception");
   }
   
   @Test
   public void dummytest() {
-    System.out.println("dummytest");
   }
 }
