@@ -11,17 +11,14 @@ import org.testng.annotations.Test;
 public class FailingBeforeTest {
   @BeforeSuite
   public void passingBeforeSuite() {
-    System.out.println("passingBeforeSuite");
   }
   
   @BeforeTest
   public void beforeTest() {
-    System.out.println("beforeTest");
     throw new RuntimeException("Test exception");
   }
   
   @Test
   public void dummytest() {
-    System.out.println("dummytest");
   }
 }
