@@ -6,7 +6,6 @@ import org.testng.annotations.BeforeTest;
 public class TestFixture1 {
   @BeforeTest(groups={"test", "testgroup"})
   public void setup() {
-    System.out.println("TestFixture setup");
   }
   
 }
