@@ -7,11 +7,9 @@ import org.testng.annotations.Test;
 public class TestFixture2 {
   @BeforeTest(groups={"test"}, dependsOnGroups={"testgroup"})
   public void setup() {
-    System.out.println("TestFixture2 setup");
   }
 
   @Test(groups={"test"})  //@@
   public void testMethod() {
-    System.out.println("test method");
   }
 }
