@@ -1,6 +1,7 @@
 ===========================================================================
 5.6
 
+Added: dataProvider to @Factory
 Added: ISuite now gives access to the current XmlSuite
 
 ===========================================================================
